--- a/rhel8_repos.yaml
+++ b/rhel8_repos.yaml
@@ -9,7 +9,7 @@
 
   tasks:
   - name: Enable specific repositories
-    rhsm_repository:
+    community.general.rhsm_repository:
       name: "{{ item }}"
       state: enabled
     with_items: "{{ enabled_repos }}"
