--- a/setup_insights.yaml
+++ b/setup_insights.yaml
@@ -5,5 +5,5 @@
   tasks:
   # Normal Register
   - name: Register the insights client
-    insights_register:
+    redhat.insights.insights_register:
       state: present
