Install the client before tyring to run it!

--- a/setup_insights.yaml
+++ b/setup_insights.yaml
@@ -4,6 +4,11 @@
 
   tasks:
   # Normal Register
+  - name: Install the latest version of the insights client
+    yum:
+      name: insights-client
+      state: latest
+
   - name: Register the insights client
     redhat.insights.insights_register:
       state: present
